added visuals folder

--- a/project-nb.ipynb
+++ b/project-nb.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1007,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1036,6 +1035,13 @@
     "plt.show()\n",
     "\n",
     "#OUTLIER: Bitcoin had an outlier around -0.38% change, resulting in a skewed boxplot chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### COVID lockdown of borders: 02/28/2020-03/26/2020"
    ]
   },
   {
@@ -1557,7 +1563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Social Unrest (George Floyd) Data '05-26-2020' - '06-25-2020'"
+    "### Social Unrest (George Floyd) Data '05-26-2020' - '06-25-2020'"
    ]
   },
   {
@@ -2424,7 +2430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extra Analysis\n",
+    "## Additional Data Analysis Exploration\n",
     "Below is analysis we conducted and would like to explore more in the future. Specifically, we would like to look at the dates in the outliers below to see what was trending on social media and the news. "
    ]
   },
